--- a/.gitignore
+++ b/.gitignore
@@ -133,7 +133,7 @@ venv.bak/
 *.ps
 *.eps
 *.pdf
-!img/*.pdf
+!report/images/*.pdf
 
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
